@@ -1,0 +1,14 @@
+#*********************************************************************
+#  Blosc - Blocked Suffling and Compression Library
+#
+#  Unit tests for basic features in Blosc.
+#
+#  Creation date: 2010-06-07
+#  Author: Francesc Alted (faltet@pytables.org)
+#
+#  See LICENSES/BLOSC.txt for details about copyright and rights to use.
+#**********************************************************************
+
+for exe in $(ls *.exe); do
+    ./$exe
+done
